// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThreeIdProvider Unsupported method should throw 1`] = `[Error: Method not found]`;

exports[`ThreeIdProvider Unsupported method should throw 2`] = `[Error: Method not found]`;

exports[`ThreeIdProvider asymmetrically decrypt correctly 1`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": "decrypted msg",
}
`;

exports[`ThreeIdProvider authenticate correctly 1`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": Object {
    "main": "mainkeys",
    "spaces": Object {
      "space1": "spacekeys",
    },
  },
}
`;

exports[`ThreeIdProvider authenticate correctly 2`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": Object {
    "main": "mainkeys",
    "spaces": Object {
      "space1": "spacekeys",
    },
  },
}
`;

exports[`ThreeIdProvider decrypt correctly 1`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": "decrypted msg",
}
`;

exports[`ThreeIdProvider isAuthenticated correctly 1`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": true,
}
`;

exports[`ThreeIdProvider sign claim correctly 1`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJkIjoiZGF0YSIsImlzcyI6ImRpZDozOmFzZGYifQ.signed",
}
`;

exports[`ThreeIdProvider sign claim correctly 2`] = `
Object {
  "id": 1,
  "jsonrpc": "2.0",
  "result": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NksifQ.eyJkIjoiZGF0YSIsImlzcyI6ImRpZDozOmFzZGYifQ.signed",
}
`;
